@@ -36,6 +36,7 @@ public class LineGameModel {
     public final Property<PlayState> state;
 
     public final Property<IChallenge> challenge; // the current challenge
+    private final ChallengeFactory challengeFactory;
     private ArrayList<IChallenge> challenges = new ArrayList<IChallenge>();
     private int challengeIndex;
 
@@ -45,6 +46,8 @@ public class LineGameModel {
         settings = new GameSettings( LEVELS_RANGE, true /* soundEnabled */, true /* timerEnabled */ );
         timer = new GameTimer();
         results = new GameResults( LEVELS_RANGE );
+
+        challengeFactory = new ChallengeFactory( LGConstants.X_AXIS_RANGE, LGConstants.Y_AXIS_RANGE );
 
         // initial value is meaningless, but must be non-null
         challenge = new Property<IChallenge>( new GTL_Challenge( Line.createSlopeIntercept( 1, 1, 1 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE,
@@ -108,10 +111,11 @@ public class LineGameModel {
         final IntegerRange yRange = LGConstants.Y_AXIS_RANGE;
         challenges.clear();
         if ( settings.level.get() == 1 ) {
-            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 1, 1, -2 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.INTERCEPT, xRange, yRange ) );
-            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 5, 1, 1 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE, xRange, yRange ) );
-            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 4, 2, 3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE_INTERCEPT, xRange, yRange ) );
-            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 3, 3, -3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.POINTS, xRange, yRange ) );
+//            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 1, 1, -2 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.INTERCEPT, xRange, yRange ) );
+//            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 5, 1, 1 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE, xRange, yRange ) );
+//            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 4, 2, 3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.SLOPE_INTERCEPT, xRange, yRange ) );
+//            challenges.add( new GTL_Challenge( Line.createSlopeIntercept( 3, 3, -3 ), LineForm.SLOPE_INTERCEPT, ManipulationMode.POINTS, xRange, yRange ) );
+            challenges = challengeFactory.createChallenges( 1 );
         }
         else if ( settings.level.get() == 2 ) {
             challenges.add( new GTL_Challenge( Line.createPointSlope( 2, 1, 1, 2 ), LineForm.POINT_SLOPE, ManipulationMode.SLOPE, xRange, yRange ) );
