@@ -1,3 +1,4 @@
+1/2/13 first pass at challenge generation for level=1
 1/2/13 use list instead of array for challenges
 12/27/12 move createEquationNode to ChallengeNode base class
 12/27/12 move correct/incorrect icons into EquationBoxNode
